src/objects/oneCRMPearsonChoicesBrand__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Offer_Type_Sequence__c</fullName>
        <label>Offer Type Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PearsonChoicesBrandValues__c</fullName>
        <label>PearsonChoicesBrandValues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>oneCRMPearsonChoicesBrand</label>
</CustomObject>